修复子弹上的命中粒子和跳弹配置不生效的 bug